# vae-playground

./: notes_3dshapes.ipynb  pyproject.toml  train_vae.ipynb
